--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -41,3 +41,17 @@ input,
 textarea {
     outline: none;
 }
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+}
