--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -55,3 +55,18 @@ textarea {
 ::-webkit-scrollbar-thumb {
     background: var(--color-primary);
 }
+
+#nprogress {
+    pointer-events: none;
+}
+
+#nprogress .bar {
+    background-color: var(--color-primary);
+    opacity: 0.8;
+    position: fixed;
+    z-index: 1031;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+}
